--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,6 +1,6 @@
 <div class='container'>
 
-  <h2><a href="<% @post.link %>"><%= @post.title %></a></h2>
+  <h2><a href="<%= @post.link %>"><%= @post.title %></a></h2>
   <ul>
   <% @comments.each do |comment| %>
     <li>
