--- a/app/views/create_user.erb
+++ b/app/views/create_user.erb
@@ -1,7 +1,12 @@
 <div class='containter'>
-  <form action='/user' method='POST'>
-    <input type="text" name="username">
-    <input type="text" name="password">
+  <form action='/users' method='POST'>
+    <input type="text" name="user[username]">
+    <input type="text" name="user[password]">
     <input type="submit" value="Create account"> 
   </form>
+
+  <% if @username_taken %>
+    <p> That username already exists! Please choose another username.</p>
+  <% end %>
+
 </div>
