--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,32 @@
 .container {
-  margin: 20px auto;
+  margin: 45px auto;
   width: 600px;
-  padding: 0px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   border: 1px dotted black;
 }
 th {
   text-align: left;
+}
+
+
+.bar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin: 0 0 2px 0;
+  height: 40px;
+  background-color: black;
+  color: white;
+}
+
+.white {
+  color: white;
+}
+
+.float-right {
+  float: right;
+}
+
+.link-padding {
+  padding: 4px;
 }
